# python-vectors

./: README.md  pyproject.toml
src/python_vectors/: __init__.py  geometry.py
src/vector_primitives/: __init__.py  geometry.py
tests/: test_geometry.py
