[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vector-primitives"
version = "0.1.0"
description = "Vector/Matrix/Polygon geometry helpers (optional pyglm)"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.8"
authors = [{ name = "oldrepublicwizard" }]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/oldrepublicwizard/python-vectors"
Repository = "https://github.com/oldrepublicwizard/python-vectors"

[project.optional-dependencies]
glm = ["pyglm"]

[tool.setuptools.packages.find]
where = ["src"]
